Updated footer links

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -66,6 +66,7 @@
         }
         .game-card img {
             width: 100%;
+            height: auto;
             border-radius: 5px;
         }
         .game-title {
@@ -96,7 +97,7 @@
         }
         .footer img {
             width: 32px;
-            height: 32px;
+            height: auto;
             margin: 0 10px;
         }
         @media (max-width: 600px) {
@@ -167,9 +168,8 @@
     </div>
     
     <div class="footer">
-        <a href="#" target="_blank"><img src="github.png" alt="GitHub"></a>
-        <a href="#" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
-        <a href="#" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+        <a href="https://github.com/iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/ismail-%C3%B6zsayg%C4%B1-62ab1a201/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" alt="LinkedIn"></a>
     </div>
 </body>
 </html>
