--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Developer Portfolio</title>
+    <title>iozsaygi's Portfolio</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
@@ -119,12 +119,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Your Name</h1>
-            <h2>Game Developer</h2>
+            <h1>İsmail Özsaygı</h1>
+            <h2>Software Engineer and Video Game Developer</h2>
         </div>
 
         <div class="section">
-            <h2>Professional Games</h2>
+            <h2>Professional Projects</h2>
             <div class="game-list">
                 <div class="game-card">
                     <img src="game1.jpg" alt="Game 1">
@@ -158,7 +158,7 @@
         </div>
 
         <div class="section">
-            <h2>Game Jam Games</h2>
+            <h2>Game Jam Entries</h2>
             <div class="game-list">
                 <div class="game-card">
                     <img src="game3.jpg" alt="Game 3">
