--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iozsaygi's Portfolio</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Manrope', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -26,7 +26,7 @@
         .header h1 {
             margin: 0;
             font-size: 32px;
-            font-weight: 600;
+            font-weight: 500;
             color: #222;
         }
         .header h2 {
