Updated styling options for section headers

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,6 +40,7 @@
         }
         .section h2 {
             font-size: 22px;
+            font-weight: 450;
             color: #222;
             margin-bottom: 10px;
             border-bottom: 1px solid #ccc;
