Added new game cards for progress

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -128,15 +128,37 @@
             <h2>Professional Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="game1.jpg" alt="Game 1">
-                    <div class="game-title">Game Title 1</div>
-                    <div class="game-role">Game Designer, Level Designer</div>
-                    <div class="game-company">Company Name</div>
+                    <img src="game1.jpg" alt="Tactica: First Contact">
+                    <div class="game-title">Tactica: First Contact</div>
+                    <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
+                    <div class="game-company">Artı XR</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> PC, Console</span>
-                        <span><b>Release Date:</b> 2023</span>
+                        <span><b>Platform:</b> Meta Quest</span>
+                        <span><b>Release Date:</b> TBD</span>
                     </div>
-                    <p>Short description of the game.</p>
+                    <p>Tabletop mixed-reality strategy game highly inspired by the Demeo and XCOM series.</p>
+                </div>
+                <div class="game-card">
+                    <img src="game1.jpg" alt="Raid Rush: Tower Defense TD">
+                    <div class="game-title">Raid Rush: Tower Defense TD</div>
+                    <div class="game-role">DevOps Engineer, and Tools Programmer</div>
+                    <div class="game-company">Panteon</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> Android, and iOS</span>
+                        <span><b>Release Date:</b> TBD</span>
+                    </div>
+                    <p>Unique tower defense game with card deck mechanics.</p>
+                </div>
+                <div class="game-card">
+                    <img src="game1.jpg" alt="Home Restoration VR">
+                    <div class="game-title">Home Restoration VR</div>
+                    <div class="game-role">DevOps Engineer</div>
+                    <div class="game-company">Panteon</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> Meta Quest, and Steam</span>
+                        <span><b>Release Date: </b> 30 Oct, 2023</span>
+                    </div>
+                    <p>Virtual reality port for a successful home restoration game on mobile platforms.</p>
                 </div>
             </div>
         </div>
@@ -145,15 +167,48 @@
             <h2>Personal Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="game2.jpg" alt="Game 2">
-                    <div class="game-title">Game Title 2</div>
-                    <div class="game-role">Lead Programmer, UI Designer</div>
+                    <img src="game2.jpg" alt="KUBEMETRIK!">
+                    <div class="game-title">KUBEMETRIK!</div>
+                    <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Mobile</span>
-                        <span><b>Release Date:</b> 2022</span>
+                        <span><b>Platform:</b> PC</span>
+                        <span><b>Release Date:</b> 07 Jan, 2024</span>
                     </div>
-                    <p>Short description of the game.</p>
+                    <p>Minimal puzzle game that we developed with a friend of mine who wants to break into the game industry as a game designer.</p>
+                </div>
+                <div class="game-card">
+                    <img src="game2.jpg" alt="C1L1">
+                    <div class="game-title">C1L!</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Independent</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> PC</span>
+                        <span><b>Release Date:</b> Summer 2023</span>
+                    </div>
+                    <p>Fan remake of the first chapter in beloved Castlevania from 1989.</p>
+                </div>
+                <div class="game-card">
+                    <img src="game2.jpg" alt="Craft your beat!">
+                    <div class="game-title">Craft your beat!</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Independent</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> PC</span>
+                        <span><b>Release Date:</b> Winter 2023</span>
+                    </div>
+                    <p>Sandbox experiment for generating drum beats in a chill atmosphere.</p>
+                </div>
+                <div class="game-card">
+                    <img src="game2.jpg" alt="Dungeons of Borne">
+                    <div class="game-title">Dungeons of Borne</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Independent</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> :Android</span>
+                        <span><b>Release Date:</b> Winter 2017</span>
+                    </div>
+                    <p>Rogue-lite game, which is highly inspired by The Binding of Isaac series.</p>
                 </div>
             </div>
         </div>
