Fixed some typos

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="game-card">
                     <img src="game2.jpg" alt="C1L1">
-                    <div class="game-title">C1L!</div>
+                    <div class="game-title">C1L1</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
@@ -205,7 +205,7 @@
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> :Android</span>
+                        <span><b>Platform:</b> Android</span>
                         <span><b>Release Date:</b> Winter 2017</span>
                     </div>
                     <p>Rogue-lite game, which is highly inspired by The Binding of Isaac series.</p>
