Added links under header instead of footer placement

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -95,16 +95,16 @@
             flex-direction: column;
             gap: 3px;
         }
-        .footer {
+        .social-links {
             text-align: center;
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #eee;
+            margin-bottom: 30px;
         }
-        .footer img {
+        .social-links a {
+            margin: 0 15px;
+        }
+        .social-links img {
             width: 32px;
             height: auto;
-            margin: 0 10px;
         }
         @media (max-width: 600px) {
             .game-list {
@@ -122,6 +122,11 @@
         <div class="header">
             <h1>İsmail Özsaygı</h1>
             <h2>Software Engineer and Video Game Developer</h2>
+        </div>
+
+        <div class="social-links">
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" alt="GitHub"></a>
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" alt="LinkedIn"></a>
         </div>
 
         <div class="section">
@@ -237,12 +242,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="footer">
-        <a href="https://github.com/iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" alt="GitHub"></a>
-
-        <a href="https://www.linkedin.com/in/ismail-%C3%B6zsayg%C4%B1-62ab1a201/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" alt="LinkedIn"></a>
     </div>
 </body>
 </html>
