Added new game card entries for game jam section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -229,16 +229,29 @@
             <h2>Game Jam Entries</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="game3.jpg" alt="Game 3">
-                    <div class="game-title">Game Title 3</div>
-                    <div class="game-role">Artist, Sound Designer</div>
-                    <div class="game-company">Game Jam Event</div>
+                    <img src="game3.jpg" alt="Mr. Grind">
+                    <div class="game-title">Mr. Grind</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Ludum Dare 45</div>
                     <div class="game-details">
-                        <span><b>Platform:</b> Web</span>
+                        <span><b>Platform:</b> PC</span>
                         <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> 2021</span>
+                        <span><b>Release Date:</b> Fall 2019</span>
                     </div>
-                    <p>Short description of the game.</p>
+                    <p>My simple take on the clicker genre with endless gameplay and an upgrade tree.</p>
+                </div>
+
+                <div class="game-card">
+                    <img src="game3.jpg" alt="TonTon: Back to Home">
+                    <div class="game-title">TonTon: Back to Home</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Global Game Jam 2019</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> PC</span>
+                        <span><b>Engine:</b> Unity</span>
+                        <span><b>Release Date:</b> Winter 2019</span>
+                    </div>
+                    <p>Cute endless runner game with pixel art graphics.</p>
                 </div>
             </div>
         </div>
