--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -229,6 +229,19 @@
             <h2>Game Jam Entries</h2>
             <div class="game-list">
                 <div class="game-card">
+                    <img src="game3.jpg" alt="Voyager">
+                    <div class="game-title">Voyager</div>
+                    <div class="game-role">Game Developer</div>
+                    <div class="game-company">Global Game Jam 2020</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> PC</span>
+                        <span><b>Engine:</b> Unity</span>
+                        <span><b>Release Date:</b> Winter 2020</span>
+                    </div>
+                    <p>Top-down shooter game with a Sci-Fi theme.</p>
+                </div>
+
+                <div class="game-card">
                     <img src="game3.jpg" alt="Mr. Grind">
                     <div class="game-title">Mr. Grind</div>
                     <div class="game-role">Game Developer</div>
