Updated release date for Tactica

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -140,7 +140,7 @@
                     <div class="game-details">
                         <span><b>Platform:</b> Meta Quest</span>
                         <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> TBD</span>
+                        <span><b>Release Date:</b> 19 Feb, 2025</span>
                     </div>
                     <p>Tabletop mixed-reality strategy game highly inspired by the Demeo and XCOM series.</p>
                 </div>
