Updated image link for Tactica

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -133,7 +133,7 @@
             <h2>Professional Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="game1.jpg" alt="Tactica: First Contact">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/tactica.jpg?raw=true" alt="Tactica: First Contact">
                     <div class="game-title">Tactica: First Contact</div>
                     <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
                     <div class="game-company">Artı XR</div>
