Updated banner link for game card

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -145,7 +145,7 @@
                     <p>Tabletop mixed-reality strategy game highly inspired by the Demeo and XCOM series.</p>
                 </div>
                 <div class="game-card">
-                    <img src="game1.jpg" alt="Raid Rush: Tower Defense TD">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
                     <div class="game-title">Raid Rush: Tower Defense TD</div>
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
                     <div class="game-company">Panteon</div>
