Updated banner link for HRVR

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -157,7 +157,7 @@
                     <p>Unique tower defense game with card deck mechanics.</p>
                 </div>
                 <div class="game-card">
-                    <img src="game1.jpg" alt="Home Restoration VR">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
                     <div class="game-title">Home Restoration VR</div>
                     <div class="game-role">DevOps Engineer</div>
                     <div class="game-company">Panteon</div>
