Updated game card order

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -144,18 +144,7 @@
                     </div>
                     <p>Tabletop mixed-reality strategy game highly inspired by the Demeo and XCOM series.</p>
                 </div>
-                <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
-                    <div class="game-title">Raid Rush: Tower Defense TD</div>
-                    <div class="game-role">DevOps Engineer, and Tools Programmer</div>
-                    <div class="game-company">Panteon</div>
-                    <div class="game-details">
-                        <span><b>Platform:</b> Android, and iOS</span>
-                        <span><b>Engine:</b> Unity</span>
-                        <span><b>Release Date:</b> TBD</span>
-                    </div>
-                    <p>Unique tower defense game with card deck mechanics.</p>
-                </div>
+
                 <div class="game-card">
                     <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
                     <div class="game-title">Home Restoration VR</div>
@@ -167,6 +156,19 @@
                         <span><b>Release Date: </b> 30 Oct, 2023</span>
                     </div>
                     <p>Virtual reality port for a successful home restoration game on mobile platforms.</p>
+                </div>
+
+                <div class="game-card">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
+                    <div class="game-title">Raid Rush: Tower Defense TD</div>
+                    <div class="game-role">DevOps Engineer, and Tools Programmer</div>
+                    <div class="game-company">Panteon</div>
+                    <div class="game-details">
+                        <span><b>Platform:</b> Android, and iOS</span>
+                        <span><b>Engine:</b> Unity</span>
+                        <span><b>Release Date:</b> Winter 2022</span>
+                    </div>
+                    <p>Unique tower defense game with card deck mechanics.</p>
                 </div>
             </div>
         </div>
