Added texture for Craft your beat!

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -189,7 +189,7 @@
                     <p>Minimal puzzle game that we developed with a friend of mine who wants to break into the game industry as a game designer.</p>
                 </div>
                 <div class="game-card">
-                    <img src="game2.jpg" alt="C1L1">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/c1l1.png?raw=true" alt="C1L1">
                     <div class="game-title">C1L1</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
