Added texture for Kubemetrik!

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -201,7 +201,7 @@
                     <p>Fan remake of the first chapter in beloved Castlevania from 1989.</p>
                 </div>
                 <div class="game-card">
-                    <img src="game2.jpg" alt="Craft your beat!">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/cyb.png?raw=true" alt="Craft your beat!">
                     <div class="game-title">Craft your beat!</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
