Added banner texture for DoB

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -177,7 +177,7 @@
             <h2>Personal Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="game2.jpg" alt="KUBEMETRIK!">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/kubemetrik.png?raw=true" alt="KUBEMETRIK!">
                     <div class="game-title">KUBEMETRIK!</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
