Updated texture link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -213,7 +213,7 @@
                     <p>Sandbox experiment for generating drum beats in a chill atmosphere.</p>
                 </div>
                 <div class="game-card">
-                    <img src="game2.jpg" alt="Dungeons of Borne">
+                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/dob.png?raw=true" alt="Dungeons of Borne">
                     <div class="game-title">Dungeons of Borne</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
