--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
         body {
-            font-family: 'Manrope', sans-serif;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -61,14 +62,18 @@
             text-align: left;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease-in-out;
+            text-decoration: none;
+            color: inherit;
         }
         .game-card:hover {
             transform: translateY(-3px);
         }
         .game-card img {
             width: 100%;
-            height: auto;
+            height: 158px;
+            object-fit: cover;
             border-radius: 5px;
+            border: 2px solid #000;
         }
         .game-title {
             font-size: 18px;
