Added YouTube logo texture

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,8 +130,8 @@
         </div>
 
         <div class="social-links">
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" alt="GitHub"></a>
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" alt="LinkedIn"></a>
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" title="GitHub" alt="GitHub"></a>
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" title="LinkedIn" alt="LinkedIn"></a>
         </div>
 
         <div class="section">
