--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,8 +130,10 @@
         </div>
 
         <div class="social-links">
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/blog.png?raw=true" title="Blog" alt="Blog"></a>
             <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" title="GitHub" alt="GitHub"></a>
             <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" title="LinkedIn" alt="LinkedIn"></a>
+            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/youtube.png?raw=true" title="YouTube" alt="YouTube"></a>
         </div>
 
         <div class="section">
