--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,10 +130,10 @@
         </div>
 
         <div class="social-links">
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/blog.png?raw=true" title="Blog" alt="Blog"></a>
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" title="GitHub" alt="GitHub"></a>
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" title="LinkedIn" alt="LinkedIn"></a>
-            <a href="#" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/youtube.png?raw=true" title="YouTube" alt="YouTube"></a>
+            <a href="https://iozsaygi.github.io/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/blog.png?raw=true" title="Blog" alt="Blog"></a>
+            <a href="https://github.com/iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/github.png?raw=true" title="GitHub" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/ismail-%C3%B6zsayg%C4%B1-62ab1a201/" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/linkedin.png?raw=true" title="LinkedIn" alt="LinkedIn"></a>
+            <a href="https://www.youtube.com/@iozsaygi" target="_blank"><img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/logos/youtube.png?raw=true" title="YouTube" alt="YouTube"></a>
         </div>
 
         <div class="section">
