--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -140,7 +140,9 @@
             <h2>Professional Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/tactica.jpg?raw=true" alt="Tactica: First Contact">
+                    <a href="https://www.meta.com/experiences/tactica/26709789558666303/?srsltid=AfmBOorCc-QT2nVCjSjRuKDXbVG9mP1PdVq1yJ4rJXcDcx9OipvOpgDj" target="_blank" title= "Tactica: First Contact">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/tactica.jpg?raw=true" alt="Tactica: First Contact">
+                    </a>
                     <div class="game-title">Tactica: First Contact</div>
                     <div class="game-role">DevOps Engineer, Gameplay Programmer, and Tools Programmer</div>
                     <div class="game-company">Artı XR</div>
@@ -153,7 +155,9 @@
                 </div>
 
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
+                    <a href="https://store.steampowered.com/app/2527980/Home_Restoration_VR/" target="_blank" title="Home Restoration VR">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/hrvr.jpg?raw=true" alt="Home Restoration VR">
+                    </a>
                     <div class="game-title">Home Restoration VR</div>
                     <div class="game-role">DevOps Engineer</div>
                     <div class="game-company">Panteon</div>
@@ -166,7 +170,9 @@
                 </div>
 
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
+                    <a href="https://apps.apple.com/us/app/raid-rush-tower-defense-td/id1662335371" target="_blank" title="Raid Rush: Tower Defense TD">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/rrtd.jpg?raw=true" alt="Raid Rush: Tower Defense TD">
+                    </a>
                     <div class="game-title">Raid Rush: Tower Defense TD</div>
                     <div class="game-role">DevOps Engineer, and Tools Programmer</div>
                     <div class="game-company">Panteon</div>
@@ -184,7 +190,9 @@
             <h2>Personal Projects</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/kubemetrik.png?raw=true" alt="KUBEMETRIK!">
+                    <a href="https://iozsaygi.itch.io/kubemetrik" target="_blank" title="KUBEMETRIK!">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/kubemetrik.png?raw=true" alt="KUBEMETRIK!">
+                    </a>
                     <div class="game-title">KUBEMETRIK!</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
@@ -196,7 +204,9 @@
                     <p>Minimal puzzle game that we developed with a friend of mine who wants to break into the game industry as a game designer.</p>
                 </div>
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/c1l1.png?raw=true" alt="C1L1">
+                    <a href="https://iozsaygi.itch.io/c1l1" target="_blank" title="C1L1">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/c1l1.png?raw=true" alt="C1L1">
+                    </a>
                     <div class="game-title">C1L1</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
@@ -208,7 +218,9 @@
                     <p>Fan remake of the first chapter in beloved Castlevania from 1989.</p>
                 </div>
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/cyb.png?raw=true" alt="Craft your beat!">
+                    <a href="https://iozsaygi.itch.io/craft-your-beat" target="_blank" title="Craft your beat!">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/cyb.png?raw=true" alt="Craft your beat!">
+                    </a>
                     <div class="game-title">Craft your beat!</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
@@ -220,7 +232,9 @@
                     <p>Sandbox experiment for generating drum beats in a chill atmosphere.</p>
                 </div>
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/dob.png?raw=true" alt="Dungeons of Borne">
+                    <a href="https://iozsaygi.itch.io/dungeons-of-borne" target="_blank" title="Dungeons of Borne">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/dob.png?raw=true" alt="Dungeons of Borne">
+                    </a>
                     <div class="game-title">Dungeons of Borne</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Independent</div>
@@ -238,7 +252,9 @@
             <h2>Game Jam Entries</h2>
             <div class="game-list">
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/mrg.png?raw=true" alt="Mr. Grind">
+                    <a href="https://iozsaygi.itch.io/mr-grind" target="_blank" title="Mr. Grind">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/mrg.png?raw=true" alt="Mr. Grind">
+                    </a>
                     <div class="game-title">Mr. Grind</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Ludum Dare 45</div>
@@ -251,7 +267,9 @@
                 </div>
 
                 <div class="game-card">
-                    <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/ttbth.png?raw=true" alt="TonTon: Back to Home">
+                    <a href="https://v3.globalgamejam.org/2019/games/tonton-back-home" target="_blank" title="TonTon: Back to Home">
+                        <img src="https://github.com/iozsaygi/iozsaygi.github.io/blob/main/assets/banners/ttbth.png?raw=true" alt="TonTon: Back to Home">
+                    </a>
                     <div class="game-title">TonTon: Back to Home</div>
                     <div class="game-role">Game Developer</div>
                     <div class="game-company">Global Game Jam 2019</div>
