Updated game descriptions

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,8 +72,8 @@
             width: 100%;
             height: 158px;
             object-fit: cover;
-            border-radius: 5px;
-            border: 2px solid #000;
+            border-radius: 8px;
+            border: 3px solid #000;
         }
         .game-title {
             font-size: 18px;
@@ -151,7 +151,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> 19 Feb, 2025</span>
                     </div>
-                    <p>Tabletop mixed-reality strategy game highly inspired by the Demeo and XCOM series.</p>
+                    <p>Led the development of a tabletop turn-based strategy title that is highly inspired by Demeo and XCOM IPs. Was responsible for every technical aspect within the game, including (but not limited to) navigation mesh, pathfinding, artificial intelligence, CI/CD pipeline, and tools creation such as in-house map editor.</p>
                 </div>
 
                 <div class="game-card">
@@ -166,7 +166,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date: </b> 30 Oct, 2023</span>
                     </div>
-                    <p>Virtual reality port for a successful home restoration game on mobile platforms.</p>
+                    <p>Focused on a stable build and deployment pipeline for gameplay programming and testing teams. Also helped to troubleshoot gameplay and optimization-related issues when available.</p>
                 </div>
 
                 <div class="game-card">
@@ -181,7 +181,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Winter 2022</span>
                     </div>
-                    <p>Unique tower defense game with card deck mechanics.</p>
+                    <p>Established and maintained in-house tool distribution web and provided stable and rapid CI/CD pipeline for development teams.</p>
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> 07 Jan, 2024</span>
                     </div>
-                    <p>Minimal puzzle game that we developed with a friend of mine who wants to break into the game industry as a game designer.</p>
+                    <p>Minimal puzzle game inspired by Bomberman IP. Developed with a friend of mine who wants to break into the game industry as a game designer.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/c1l1" target="_blank" title="C1L1">
@@ -215,7 +215,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Summer 2023</span>
                     </div>
-                    <p>Fan remake of the first chapter in beloved Castlevania from 1989.</p>
+                    <p>As a big fan of the Castlevania franchise, I remade the first chapter in Castlevania (1989) in the Unity engine. Reworked several gameplay aspects with my own inspired ideas.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/craft-your-beat" target="_blank" title="Craft your beat!">
@@ -229,7 +229,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Winter 2023</span>
                     </div>
-                    <p>Sandbox experiment for generating drum beats in a chill atmosphere.</p>
+                    <p>Highly inspired by the beloved osu!, Craft your beat! is a chill sandbox where you can sit back and generate randomized drum beats.</p>
                 </div>
                 <div class="game-card">
                     <a href="https://iozsaygi.itch.io/dungeons-of-borne" target="_blank" title="Dungeons of Borne">
@@ -243,7 +243,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Winter 2017</span>
                     </div>
-                    <p>Rogue-lite game, which is highly inspired by The Binding of Isaac series.</p>
+                    <p>Rogue-lite game inspired by The Binding of Isaac. Worked on this game during my college years, the second game I was able to actually finish.</p>
                 </div>
             </div>
         </div>
@@ -263,7 +263,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Fall 2019</span>
                     </div>
-                    <p>My simple take on the clicker genre with endless gameplay and an upgrade tree.</p>
+                    <p>Endless clicker game, which I developed for my first Ludum Dare entry. Features an orc with his lovely pickaxe and a mine where he can dig until oblivion.</p>
                 </div>
 
                 <div class="game-card">
@@ -278,7 +278,7 @@
                         <span><b>Engine:</b> Unity</span>
                         <span><b>Release Date:</b> Winter 2019</span>
                     </div>
-                    <p>Cute endless runner game with pixel art graphics.</p>
+                    <p>Result of my first game jam participation: endless runner with cute pixel art graphics.</p>
                 </div>
             </div>
         </div>
